--- a/Core/View/layouts/partial/twig_content.phtml
+++ b/Core/View/layouts/partial/twig_content.phtml
@@ -1,10 +1,109 @@
-  <script>
-        $(document).ready(function(){
-            $(".slider").jSlider({elem:"div",images:true, animation: "fade",auto_slide: true, auto_slide_interval:5000, infinite: true, speed: 2200});
+<script>
+
+   require(["jquery","jcarousel"], function(  $, jcarousel_obj  ) {
+
+       var jcarousel = $('.jcarousel');
+
+       jcarousel
+           .on('jcarousel:reload jcarousel:create', function () {
+               var carousel = $(this),
+                   width = carousel.innerWidth();
+
+               /*  if (width >= 600) {
+                width = width / 3;
+                } else if (width >= 350) {
+                width = width / 2;
+                }*/
+
+               carousel.jcarousel('items').css('width', Math.ceil(width) + 'px');
+           })
+           .jcarousel({
+               wrap: 'circular'
+           })
+           .jcarouselAutoscroll({
+               interval: 8000,
+               target: '+=1',
+               autostart: true
+           });
+
+       $('.jcarousel-control-prev')
+           .jcarouselControl({
+               target: '-=1'
+           });
+
+       $('.jcarousel-control-next')
+           .jcarouselControl({
+               target: '+=1'
+           });
+
+       $('.jcarousel-pagination')
+           .on('jcarouselpagination:active', 'a', function() {
+               $(this).addClass('active');
+           })
+           .on('jcarouselpagination:inactive', 'a', function() {
+               $(this).removeClass('active');
+           })
+           .on('click', function(e) {
+               e.preventDefault();
+           })
+           .jcarouselPagination({
+               perPage: 1,
+               item: function(page) {
+                   return '<a href="#' + page + '">' + page + '</a>';
+               }
+           });
+   });
+
+       /*
+      require(["jSlider" ], function(  jSlider) {
+          //$(".slider").jSlider("zc")
+          if (jSlider.jSlider) {
+              console.log("sdf")
+            //$(".slider").jSlider({elem:"div",images:true, animation: "fade",auto_slide: true, auto_slide_interval:5000, infinite: true, speed: 2200});
+          } else {
+              console.log("sad")          }
         });
-    </script>
+    */
+
+
+
+
+
+</script>
+
+
   <div id="content">
                 <div class="content-text">
+
+
+
+                    <div class="wrapper">
+                        <div class="jcarousel-wrapper">
+                            <div class="jcarousel">
+                                <ul>
+                                    <li><img src="{{ baseUrl("public/images/napitki.png") }}" alt="Image 0"></li>
+                                    <li><img src="{{ baseUrl("public/images/fruits.png") }}" alt="Image 1"></li>
+                                    <li><img src="{{ baseUrl("public/images/drinks_n_water.png") }}" alt="Image 2"></li>
+                                    <li><img src="{{ baseUrl("public/images/sugar.png") }}" alt="Image 1"></li>
+                                    <li><img src="{{ baseUrl("public/images/cold.png") }}" alt="Image 1"></li>
+                                    <li><img src="{{ baseUrl("public/images/gigiena_sl.png") }}" alt="Image 1"></li>
+                                    <li><img src="{{ baseUrl("public/images/milk_sl.png") }}" alt="Image 1"></li>
+                                    <li><img src="{{ baseUrl("public/images/grocery_sl.png") }}" alt="Image 1"></li>
+                                    <li><img src="{{ baseUrl("public/images/stationary_sl.png") }}" alt="Image 1"></li>
+                                    <li><img src="{{ baseUrl("public/images/chemistry.png") }}" alt="Image 1"></li>
+                                    <li><img src="{{ baseUrl("public/images/eggs.png") }}" alt="Image 1"></li>
+                                </ul>
+                            </div>
+
+                            <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
+                            <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+
+                            <p class="jcarousel-pagination"></p>
+                        </div>
+                    </div>
+
+
+
                     <div class="slider">
                         <div><a href="" title="напитки"><img src="public/images/напитки.png" /></a></div>
                         <div><a href=""  title="фрукты"><img src="public/images/фрукты.png" /></a></div>
