--- a/Core/View/layouts/partial/twig_header.phtml
+++ b/Core/View/layouts/partial/twig_header.phtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{{ baseUrl('/public/css/font-awesome.css') }}" />
     <link rel="stylesheet" href="{{ baseUrl('/public/css/styles.css') }}" />
     <link rel="stylesheet" href="{{ baseUrl('/public/css/print.css') }}" media="print" />
-    <link rel="shortcut icon"  href="{{ baseUrl('favicon.png') }}" type="image/png" />
+    <link rel="shortcut icon"  href="{{ baseUrl('/public/favicon.png') }}" type="image/png" />
 
     <script src="{{ baseUrl('/public/js/require.js') }}"></script>
     <script src="{{ baseUrl('/public/js/config.js') }}"></script>
