--- a/Core/View/layouts/partial/twig_header_small.phtml
+++ b/Core/View/layouts/partial/twig_header_small.phtml
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="profile" href="http://gmpg.org/xfn/11"/>
     <link rel="stylesheet" href="{{ baseUrl('/public/css/bootstrap.css') }}" />
+    <link rel="stylesheet" href="{{ baseUrl('/public/css/small.css') }}" />
 
 
-    <link rel="icon"  href="{{ baseUrl('favicon.png') }}" type="image/png" />
+    <link rel="icon"  href="{{ baseUrl('/public/favicon.png') }}" type="image/png" />
     <script src="{{ baseUrl('/public/js/require.js') }}"></script>
 
     {%
