--- a/modules/Admin/view/categories-crud.phtml
+++ b/modules/Admin/view/categories-crud.phtml
@@ -16,9 +16,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-lg-2" for="categories_seo_page_name">{{ __('СЕО') }}</label>
+            <label class="control-label col-lg-2" for="categories_seo_page_name">{{ __('СЕО-имя') }}</label>
             <div class="col-lg-10">
-                <input type="categories_seo_page_name" class="form-control" id="categories_seo_page_name" name="categories_seo_page_name" value="{{ row.categories_seo_page_name }}" required />
+                <input type="text" class="form-control" id="categories_seo_page_name" name="categories_seo_page_name" value="{{ row.categories_seo_page_name }}" required />
             </div>
         </div>
         <!--div class="form-group">
