--- a/modules/Basket/view/Base.phtml
+++ b/modules/Basket/view/Base.phtml
@@ -4,11 +4,11 @@
     <div class="wrapper-goods">
         {% if(step != 4) %}
         <div class="basket-navigation">
-            <div class="button-basket active">Корзина</div>
-            <div class='separator'></div>
-            <div class="button-adress">Адрес</div>
-            <div class='separator'></div>
-            <div class="button-type-of-payment">Тип оплаты</div>
+            <div class="basket-btn-navi button-basket {% if(step == 1) %}active{% endif %}" data-step="1">Корзина</div>
+            <div class="separator"></div>
+            <div class="basket-btn-navi button-adress {% if(step == 2) %}active{% endif %}" data-step="2">Адрес</div>
+            <div class="separator"></div>
+            <div class="basket-btn-navi button-type-of-payment {% if(step == 3) %}active{% endif %}" data-step="3">Тип оплаты</div>
         </div>
         {% endif %}
 
@@ -16,7 +16,7 @@
 
         {% if(step == 1) %}
             {% if(products) %}
-            <table class='title'>
+            <table class="title">
                 <tr>
                     <td>Фото</td>
                     <td>Наименование</td>
@@ -25,13 +25,13 @@
                     <td>Стоимость</td>
                 </tr>
             </table>
-            <div class='white'>
+            <div class="white">
                 <table id="basket-items">
                     {% for product in products %}
                         <tr class="product-item">
-                            <td><!--div class="image-box"><img src="{{ baseUrl('public/images/goods1.jpg') }}"></div--></td>
+                            <td><div class="image-box"><img src="{{ baseUrl('public/images/goods1.jpg') }}"></div></td>
                             <td>{{ product.products_name }}</td>
-                            <td>{{ product.products_shoppingcart_price }} грн.</td>
+                            <td>{{ product.products_shoppingcart_price|round(2, 'ceil') }} грн.</td>
                             <td>
                                 <input type="hidden" name="products_id" value="{{ product.products_id }}">
                                 <input type="hidden" name="products_shoppingcart_price" value="{{ product.products_shoppingcart_price }}">
@@ -49,19 +49,27 @@
             {% endif %}
         {% elseif(step == 2) %}
             <h4>Адрес доставки</h4>
-            <div class='white note'>
+            <div class="white note">
                 <textarea id="address_dostavki">{{ address_dostavki }}</textarea>
             </div>
         {% elseif(step == 3) %}
-            С текущего баланса
-            <br> Сумма: {{ total }}
 
+            <br> Итоговая сумма будет снята с текущего баланса пользователя
+            <br> Сумма: {{ total }}
+            <br>
             {% if(total_discounted) %}
-                Сумма со скидкой: {{ total_discounted }}
+                Сумма со скидкой: {{ total_discounted|round(2, 'ceil') }}
             {% endif %}
+             <br>
 
         {% elseif(step == 4) %}
-            Спасибо за заказ!
+            {{ new_order_mess }}
+            {% if(new_orders_id)  %}
+                <p>#{{ new_orders_id  }}</p>
+            {% endif %}
+            {% if(present)  %}
+                <p>{{ present  }}</p>
+            {% endif %}
         {% endif %}
 
 
@@ -69,7 +77,7 @@
         <div class="basket-navigation-second">
             <!--button class="button-basket">В Каталог</button-->
             <button class="button-adress clear-basket"> Очистить Корзину </button>
-            <a href="{{ next_step_link }}" next_step="{{ next_step }}" class="next_step">{{ next_step_head }}</a>
+            <a href="JavaScript:void(0);" data-next_step="{{ next_step }}" class="next_step button-type-of-payment">{{ next_step_head }}</a>
         </div>
         {% endif %}
     </div>
@@ -81,9 +89,56 @@
     require(["jquery", "bluz.notify"], function($, notify) {
         $(function(){
 
+            $(".basket-btn-navi").off().on("click",function(e){
+                var data = {}
+                var url = "корзина"
+                var target_step = $(this).attr("data-step") * 1
+                var current_step = $("input[name=step]").val() * 1
+                data["step"] = target_step
+
+                if($(this).hasClass("active")) return false;
+
+                if(target_step > current_step)  return false;
+
+                $.ajax({
+                    type: "POST",
+                    data: data,
+                    url: url,
+                    context: document.body,
+                    dataType: "html"
+                }).done(function(response,status,responseObj) {
+
+                        if(status == "success"){
+                            $("#content_box").html(response)
+
+                            if(responseObj.status != 200){
+
+                            } else {
+                                var data = {}
+
+                                if(current_step == 3){
+
+                                    $.ajax({
+                                        type: "POST",
+                                        data: data,
+                                        url: "users/widget/cabinet",
+                                        context: document.body,
+                                        dataType: "html"
+                                    }).done(function(response,status,responseObj) {
+                                            if(status == "success"){
+                                                $(".widget.wg-cabinet").html(response)
+                                            }
+                                        });
+                                }
+                            }
+
+                        }
+                    });
+            });
+
             $(".next_step").off()
                 .on("click",function(e){
-                    var next_step = $(this).attr("next_step");
+                    var next_step = $(this).attr("data-next_step");
                     var step = $("input[name=step]").val() * 1
 
                     var data = {}
